--- a/src/app/shared/components/frame-buttons/frame-buttons.component.html
+++ b/src/app/shared/components/frame-buttons/frame-buttons.component.html
@@ -1,5 +1,5 @@
 <div class="frame-buttons no-drag" *ngIf="isElectronApp">
-  <mat-icon (click)="onMinimize()" class="frame-buttons__btn" [color]="primary ? 'primary' : ''">minimize</mat-icon>
+  <mat-icon (click)="onMinimize()" class="frame-buttons__btn frame-buttons__btn--minimize" [color]="primary ? 'primary' : ''">minimize</mat-icon>
   <mat-icon (click)="onMaximize()" class="frame-buttons__btn" [color]="primary ? 'primary' : ''">{{ fullScreen ? 'fullscreen_exit' : 'fullscreen' }}</mat-icon>
   <mat-icon (click)="onClose()" class="frame-buttons__btn" [color]="primary ? 'primary' : ''">close</mat-icon>
 </div>
