--- a/src/app/shared/components/frame-buttons/frame-buttons.component.scss
+++ b/src/app/shared/components/frame-buttons/frame-buttons.component.scss
@@ -13,6 +13,11 @@
     &:hover {
       color: lighten($primary, 40);
     }
+
+    &--minimize {
+      position: relative;
+      top: -7px;
+    }
   }
 
 }
