--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,9 @@
+<app-frame-buttons [primary]="true"></app-frame-buttons>
 <div class="auth" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center">
   <div fxFlex="50%" class="auth__image-wrapper">
     <img class="auth__image" src="assets/img/auth.jpg" alt="Image">
   </div>
-  <div class="auth__content">
+  <div class="auth__content no-drag">
     <router-outlet></router-outlet>
   </div>
 </div>
