--- a/src/app/dashboard/information/components/friend-details/friend-details.component.html
+++ b/src/app/dashboard/information/components/friend-details/friend-details.component.html
@@ -10,7 +10,7 @@
     <ng-container *ngIf="!loader">
       <span matTooltip="Call" class="mr-5">
         <button mat-mini-fab color="primary" (click)="onCall(user)">
-          <mat-icon aria-hidden="true">call</mat-icon>
+          <mat-icon aria-hidden="true">video_call</mat-icon>
         </button>
       </span>
       <span matTooltip="Close Chat" class="mr-5">
