--- a/src/app/scss/global.scss
+++ b/src/app/scss/global.scss
@@ -74,6 +74,15 @@ body {
     -webkit-app-region: no-drag;
   }
 
+  .video-call-modal {
+    height: 95%;
+    width: 100%;
+
+    .mat-dialog-container {
+      padding: 0;
+    }
+  }
+
   .scrollbar::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
