--- a/src/app/shared/components/video-call/video-call.component.html
+++ b/src/app/shared/components/video-call/video-call.component.html
@@ -1,9 +1,21 @@
+<div *ngIf="data.user && showCall" class="video-call-user">
+  <div class="video-call-user__animation">
+    <img class="video-call-user__img" [src]="data.user.photoURL" alt="">
+  </div>
+  <p class="video-call-user__title">{{ data.user.displayName }}</p>
+</div>
+
 <div class="video-call">
   <div class="video-call__main">
     <div [id]="localCall" class="video-call__local"></div>
     <div [id]="remoteCalls[0]" class="video-call__remote"></div>
   </div>
   <div class="video-call__actions">
+    <span *ngIf="!outcome" matTooltip="Call" class="mr-5">
+      <button mat-mini-fab color="primary" (click)="onAcceptCall()">
+        <mat-icon aria-hidden="true">call</mat-icon>
+      </button>
+    </span>
     <span [matTooltip]="muted ? 'Enable microphone' : 'Disable microphone'" class="mr-5">
       <button mat-mini-fab color="primary" (click)="onMute()">
         <mat-icon aria-hidden="true">{{ muted ? 'mic_off' : 'mic' }}</mat-icon>
