--- a/src/app/shared/components/video-call/video-call.component.scss
+++ b/src/app/shared/components/video-call/video-call.component.scss
@@ -8,6 +8,43 @@
   height: 100%;
   position: relative;
 
+  &-user {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    transform: translate(-50%, -55%);
+    z-index: 1;
+
+    &__animation {
+      animation: play 2s ease infinite;
+      background: #fff;
+      backface-visibility: hidden;
+      border: solid 5px #fff;
+      border-radius: 100%;
+      height: 180px;
+      margin: 0 auto;
+      width: 180px;
+    }
+
+    &__img {
+      border-radius: 100%;
+      height: 180px;
+      left: 0px;
+      object-fit: cover;
+      position: absolute;
+      top: 0px;
+      width: 180px;
+    }
+
+    &__title {
+      color: $primary;
+      font-size: 1.2em;
+      font-weight: 700;
+      margin: 10px 0;
+    }
+  }
+
   &__main {
     flex: 1 1 auto;
     height: 100%;
@@ -32,5 +69,20 @@
     display: flex;
     justify-content: center;
     padding: 10px 0;
+  }
+}
+
+@keyframes play {
+  0% {
+    transform: scale(1);
+  }
+  15% {
+    box-shadow: 0 0 0 5px rgba(155, 157, 164, 0.4);
+  }
+  25% {
+    box-shadow: 0 0 0 10px rgba(155, 157, 164, 0.4), 0 0 0 20px rgba(155, 157, 164, 0.2);
+  }
+  25% {
+    box-shadow: 0 0 0 15px rgba(155, 157, 164, 0.4), 0 0 0 30px rgba(155, 157, 164, 0.2);
   }
 }
