--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <app-navbar></app-navbar>
-  <div class="dashboard__wrapper" fxLayout="row">
+  <div class="dashboard__wrapper" fxLayout="row" fxLayout.lt-sm="column">
     <div fxFlex="25%" class="dashboard__item">
       <app-user-actions></app-user-actions>
     </div>
